--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
-    <link type="text/css" rel="stylesheet" href="../css-files/buy-content.css">
+    <link type="text/css" rel="stylesheet" href="../css-files/buy-rent-sell.css">
     <meta charset="UTF-8">
     <meta name="Buy Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
@@ -33,245 +33,12 @@
 
     <!--Content-->
     <main class="page-body">
-        <div class="buy-info-box">
+        <div class="buy-content-info-box">
             <p>Real Estate Agency, Is The Largest Real Estate Company In The World, Offering Real Estate Serivces All Around The World, So That You Can Find Your Dream House In The Most Simple And Quickest Way Possible.</p>
             <p>That's Why Below We Are Giving You A Fair Shair Of Choices, Consisting Of All The Real Estate We Are Currently Selling</p>
             <p>All Around The World, All The Way From Sunny California To Clear Beaches Of Bali</p>
         </div>
 
-        <div class="flex-most-options">
-            <div class="popular">
-                <a href="../buy-files/most-popular.html">Most Popular Locations</a>
-            </div>
-            <div class="iconic">
-                <a href="../buy-files/iconic.html">Most Iconic Locations</a>
-            </div>
-        </div>
-
-        <div class="flex-container-first">
-            <div class="italy">
-                <a href="../buy-files/italy.html">Italy Locations</a>
-            </div>
-            <div class="switzerland">
-                <a href="../buy-files/switzerland.html">Switzerland Locations</a>
-            </div>
-            <div class="engalnd">
-                <a href="../buy-files/england.html">England Locations</a>
-            </div>
-            <div class="germany">
-                <a href="../buy-files/germany.html">Germany Locations</a>
-            </div>
-            <div class="france">
-                <a href="../buy-files/france.html">France Locatons</a>
-            </div>
-            <div class="greece">
-                <a href="../buy-files/greece.html">Greece Locations</a>
-            </div>
-            <div class="poland">
-                <a href="../buy-files/poland.html">Poland Locations</a>
-            </div>
-            <div class="ireland">
-                <a href="../buy-files/irland.html">Irland Locations</a>
-            </div>
-        </div>
-
-        <div class="flex-container-second">
-            <div class="france">
-                <a href="../buy-files/france.html">France Locatons</a>
-            </div>
-            <div class="greece">
-                <a href="../buy-files/greece.html">Greece Locations</a>
-            </div>
-            <div class="poland">
-                <a href="../buy-files/poland.html">Poland Locations</a>
-            </div>
-            <div class="ireland">
-                <a href="../buy-files/irland.html">Irland Locations</a>
-            </div>
-            <div class="holand">
-                <a href="../buy-files/holland.html">Holland Locations</a>
-            </div>
-            <div class="beligum">
-                <a href="../buy-files/belgium.html">Belgium Locations</a>
-            </div>
-            <div class="sweden">
-                <a href="../buy-files/sweden.html">Sweden Locations</a>
-            </div>
-            <div class="norway">
-                <a href="../buy-files/norway.html">Norway Locations</a>
-            </div>
-        </div>
-
-        <div class="flex-container-third">
-            <div class="usa">
-                <a href="../buy-files/usa.html">USA Locations</a>
-            </div>
-            <div class="canada">
-                <a href="../buy-files/canada.html">Canada Locations</a>
-            </div>
-            <div class="wales">
-                <a href="../buy-files/wales.html">Wales Locations</a>
-            </div>
-            <div class="scotland">
-                <a href="../buy-files/scotland.html">Scotland Locations</a>
-            </div>
-            <div class="austria">
-                <a href="../buy-files/austria.html">Austria Locations</a>
-            </div>
-            <div class="croatia">
-                <a href="../buy-files/croatia.html">Croatia Locations</a>
-            </div>
-            <div class="denmark">
-                <a href="../buy-files/denmark.html">Denmark Locations</a>
-            </div>
-            <div class="romania">
-                <a href="../buy-files/romaina.html">Romaina Locations</a>
-            </div>
-        </div>
-
-        <div class="flex-container-four">
-            <div class="finland">
-                <a href="../buy-files/finland.html">Finland Locations</a>
-            </div>
-            <div class="czechia">
-                <a href="../buy-files/czechia.html">Czechia Locations</a>
-            </div>
-            <div class="bulgaria">
-                <a href="../buy-files/bulgaria.html">Bulgaria Locations</a>
-            </div>
-            <div class="hungary">
-                <a href="../buy-files/hungary.html">Hungary Locations</a>
-            </div>
-            <div class="luxemborg">
-                <a href="../buy-files/luxemborg.html">Luxemborg Locations</a>
-            </div>
-            <div class="malta">
-                <a href="../buy-files/malta.html">Malta Locations</a>
-            </div>
-            <div class="slovenia">
-                <a href="../buy-files/slovenia.html">Slovenia Locations</a>
-            </div>
-            <div class="estonia">
-                <a href="../buy-files/estonia.html">Estonia Locations</a>
-            </div>
-        </div>
-
-        <div class="flex-container-five">
-            <div class="serbia">
-                <a href="../buy-files/serbia.html">Serbia Locations</a>
-            </div>
-            <div class="lithuania">
-                <a href="../buy-files/lithuania.html">Lithuania Locations</a>
-            </div>
-            <div class="slovakia">
-                <a href="../buy-files/slovakia.html">Slovakia Locations</a>
-            </div>
-            <div class="monacco">
-                <a href="../buy-files/monacoo.html">Monaco Locations</a>
-            </div>
-            <div class="latvia">
-                <a href="../buy-files/latvia.html">Latvia Locations</a>
-            </div>
-            <div class="san">
-                <a href="../buy-files/sanmarino.html">San Marino Locations</a>
-            </div>
-            <div class="faroe">
-                <a href="../buy-files/faroe-islands.html">Faroe Islands Locations</a>
-            </div>
-            <div class="gibraltar">
-                <a href="../buy-files/gibraltar.html">Gibraltar Locations</a>
-            </div>
-        </div>
-
-        <div class="flex-container-six">
-            <div class="isle">
-                <a href="../buy-files/isle-of-man.html">Isle Of Man Locations</a>
-            </div>
-            <div class="egypt">
-                <a href="../buy-files/egypt.html">Egypt Locations</a>
-            </div>
-            <div class="south">
-                <a href="../buy-files/south-africa.html">South Africa Locations</a>
-            </div>
-            <div class="moracco">
-                <a href="../buy-files/moracco.html">Moracco Locations</a>
-            </div>
-            <div class="indonasia">
-                <a href="../buy-files/indonasia.html">Indonasia Locations</a>
-            </div>
-            <div class="japan">
-                <a href="../buy-files/japan.html">Japan Locations</a>
-            </div>
-            <div class="thailand">
-                <a href="../buy-files/thailand.html">Thailand Locations</a>
-            </div>
-            <div class="uae">
-                <a href="../buy-files/uae.html">Uninted Arab Emirates Locations</a>
-            </div>
-        </div>
-
-        <div class="flex-container-seven">
-            <div class="maledives">
-                <a href="../buy-files/maledives.html">Maldives Locations</a>
-            </div>
-            <div class="singapore">
-                <a href="../buy-files/singapore.html">Singapore Locations</a>
-            </div>
-            <div class="isreal">
-                <a href="../buy-files/isreal.html">Isreal Locations</a>
-            </div>
-            <div class="srilanka">
-                <a href="../buy-files/sri-lanka.html">Sri Lanka Locations</a>
-            </div>
-            <div class="austraila">
-                <a href="../buy-files/austraila.html">Austraila Locations</a>
-            </div>
-            <div class="new-zeland">
-                <a href="../buy-files/new-zeland.html">New Zeland Locations</a>
-            </div>
-            <div class="fijii">
-                <a href="../buy-files/fiji.html">Fiji Locations</a>
-            </div>
-            <div class="solmon">
-                <a href="../buy-files/solomon-islands.html">Solomon Islands Locations</a>
-            </div>
-        </div>
-
-        <div class="flex-container-eight">
-            <div class="brazil">
-                <a href="../buy-files/brazil.html">Brazil Locations</a>
-            </div>
-            <div class="mexico">
-                <a href="../buy-files/mexico.html">Mexico Locations</a>
-            </div>
-            <div class="columbia">
-                <a href="../buy-files/columbia.html">Columbia Locations</a>
-            </div>
-            <div class="argentina">
-                <a href="../buy-files/argentina.html">Argentina Locations</a>
-            </div>
-            <div class="chile">
-                <a href="../buy-files/chile.html">Chile Locations</a>
-            </div>
-            <div class="cuba">
-                <a href="../buy-files/cuba.html">Cuba Locations</a>
-            </div>
-            <div class="domcican">
-                <a href="../buy-files/domician-repuvlic.html">Dominican Republic Locations</a>
-            </div>
-            <div class="costa">
-                <a href="../buy-files/costa-rica.html">Costa Rica Locations</a>
-            </div>
-        </div>
-
-        <div class="flex-container-last">
-            <div class="bahamas">
-                <a href="../buy-files/bahams.html">Bahams Locations</a>
-            </div>
-            <div class="barbados">
-                <a href="../buy-files/barbados.html">Barbados Locations</a>
-            </div>
-        </div>
     </main>
 
     <!--Footer-->
