--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -39,6 +39,24 @@
             <p>All Around The World, All The Way From Sunny California To Clear Beaches Of Bali</p>
         </div>
 
+        <div class="flex-hero-container-one">
+            <div class="hero-italy-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/italy.html">Italy Loccations</a>
+                </div>
+            </div>
+            <div class="hero-canada-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/canada.html">Canada Locations</a>
+                </div>
+            </div>
+            <div class="hero-maldives-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/maledives.html">Maldives Locations</a>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <!--Footer-->
