--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -55,6 +55,24 @@
                     <a href="../buy-files/maledives.html">Maldives Locations</a>
                 </div>
             </div>
+            <div class="hero-singapore-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/singapore.html">Singapore Locations</a>
+                </div>
+            </div>
+            <div class="hero-isreal-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/isreal.html">Isreal Locations</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="flex-hero-container-two">
+            <div class="hero-usa-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/usa.html">USA Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
