--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -73,6 +73,11 @@
                     <a href="../buy-files/usa.html">USA Locations</a>
                 </div>
             </div>
+            <div class="hero-switzerland-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/switzerland.html">Switzerland Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
