--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -78,6 +78,21 @@
                     <a href="../buy-files/switzerland.html">Switzerland Locations</a>
                 </div>
             </div>
+            <div class="hero-scotland-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/scotland.html">Scotland Locations</a>
+                </div>
+            </div>
+            <div class="hero-sri-lanka-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/sri-lanka.html">Sri Lanka Locations</a>
+                </div>
+            </div>
+            <div class="hero-denamrk-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/denmark.html">Denmark Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
