--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -95,6 +95,14 @@
             </div>
         </div>
 
+        <div class="flex-hero-container-three">
+            <div class="hero-latvia-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/latvia.html">Latvia Locations</a>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <!--Footer-->
