--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -101,6 +101,21 @@
                     <a href="../buy-files/latvia.html">Latvia Locations</a>
                 </div>
             </div>
+            <div class="hero-uae-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/uae.html">UAE Locations</a>
+                </div>
+            </div>
+            <div class="hero-england-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/england.html">England Locations</a>
+                </div>
+            </div>
+            <div class="hero-germany-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/germany.html">Germany Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
