--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -116,6 +116,11 @@
                     <a href="../buy-files/germany.html">Germany Locations</a>
                 </div>
             </div>
+            <div class="hero-france-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/france.html">France Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
