--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -39,38 +39,11 @@
             <p>All Around The World, All The Way From Sunny California To Clear Beaches Of Bali</p>
         </div>
 
-        <div class="flex-hero-container-one">
+        <div class="europe-constiries-box">
+            <p><b>Europe Locations</b></p>
             <div class="hero-italy-image">
                 <div class="hero-text-all">
-                    <a href="../buy-files/italy.html">Italy Loccations</a>
-                </div>
-            </div>
-            <div class="hero-canada-image">
-                <div class="hero-text-all">
-                    <a href="../buy-files/canada.html">Canada Locations</a>
-                </div>
-            </div>
-            <div class="hero-maldives-image">
-                <div class="hero-text-all">
-                    <a href="../buy-files/maledives.html">Maldives Locations</a>
-                </div>
-            </div>
-            <div class="hero-singapore-image">
-                <div class="hero-text-all">
-                    <a href="../buy-files/singapore.html">Singapore Locations</a>
-                </div>
-            </div>
-            <div class="hero-isreal-image">
-                <div class="hero-text-all">
-                    <a href="../buy-files/isreal.html">Isreal Locations</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="flex-hero-container-two">
-            <div class="hero-usa-image">
-                <div class="hero-text-all">
-                    <a href="../buy-files/usa.html">USA Locations</a>
+                    <a href="../buy-files/italy.html">Italy Locations</a>
                 </div>
             </div>
             <div class="hero-switzerland-image">
@@ -81,44 +54,6 @@
             <div class="hero-scotland-image">
                 <div class="hero-text-all">
                     <a href="../buy-files/scotland.html">Scotland Locations</a>
-                </div>
-            </div>
-            <div class="hero-sri-lanka-image">
-                <div class="hero-text-all">
-                    <a href="../buy-files/sri-lanka.html">Sri Lanka Locations</a>
-                </div>
-            </div>
-            <div class="hero-denamrk-image">
-                <div class="hero-text-all">
-                    <a href="../buy-files/denmark.html">Denmark Locations</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="flex-hero-container-three">
-            <div class="hero-latvia-image">
-                <div class="hero-text-all">
-                    <a href="../buy-files/latvia.html">Latvia Locations</a>
-                </div>
-            </div>
-            <div class="hero-uae-image">
-                <div class="hero-text-all">
-                    <a href="../buy-files/uae.html">UAE Locations</a>
-                </div>
-            </div>
-            <div class="hero-england-image">
-                <div class="hero-text-all">
-                    <a href="../buy-files/england.html">England Locations</a>
-                </div>
-            </div>
-            <div class="hero-germany-image">
-                <div class="hero-text-all">
-                    <a href="../buy-files/germany.html">Germany Locations</a>
-                </div>
-            </div>
-            <div class="hero-france-image">
-                <div class="hero-text-all">
-                    <a href="../buy-files/france.html">France Locations</a>
                 </div>
             </div>
         </div>
