--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -56,6 +56,16 @@
                     <a href="../buy-files/scotland.html">Scotland Locations</a>
                 </div>
             </div>
+            <div class="hero-poland-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/poland.html">Poland Locations</a>
+                </div>
+            </div>
+            <div class="hero-denmark-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/denmark.html">Denmark Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
