--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -39,7 +39,7 @@
             <p>All Around The World, All The Way From Sunny California To Clear Beaches Of Bali</p>
         </div>
 
-        <div class="europe-constiries-box">
+        <div class="flex-europe-constiries-box wrap">
             <p><b>Europe Locations</b></p>
             <div class="hero-italy-image">
                 <div class="hero-text-all">
@@ -64,6 +64,12 @@
             <div class="hero-denmark-image">
                 <div class="hero-text-all">
                     <a href="../buy-files/denmark.html">Denmark Locations</a>
+                </div>
+            </div>
+            <br>
+            <div class="hero-latvia-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/latvia.html">Latvia Locations</a>
                 </div>
             </div>
         </div>
