--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -66,10 +66,24 @@
                     <a href="../buy-files/denmark.html">Denmark Locations</a>
                 </div>
             </div>
-            <br>
             <div class="hero-latvia-image">
                 <div class="hero-text-all">
                     <a href="../buy-files/latvia.html">Latvia Locations</a>
+                </div>
+            </div>
+            <div class="hero-england-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/england.html">England Locations</a>
+                </div>
+            </div>
+            <div class="hero-germany-hero">
+                <div class="hero-text-all">
+                    <a href="../buy-files/germany.html">Germany Locations</a>
+                </div>
+            </div>
+            <div class="hero-france-hero">
+                <div class="hero-text-all">
+                    <a href="../buy-files/france.html">France Locations</a>
                 </div>
             </div>
         </div>
