--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -86,6 +86,16 @@
                     <a href="../buy-files/france.html">France Locations</a>
                 </div>
             </div>
+            <div class="hero-greece-hero">
+                <div class="hero-text-all">
+                    <a href="../buy-files/greece.html">Greece Locations</a>
+                </div>
+            </div>
+            <div class="hero-irland-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/irland.html">Irland Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
