--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -96,6 +96,26 @@
                     <a href="../buy-files/irland.html">Irland Locations</a>
                 </div>
             </div>
+            <div class="hero-belgium-hero">
+                <div class="hero-text-all">
+                    <a href="../buy-files/belgium.html">Belgium Locations</a>
+                </div>
+            </div>
+            <div class="hero-crotia-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/croatia.html">Croatia Locations</a>
+                </div>
+            </div>
+            <div class="hero-wales-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/wales.html">Wales Locations</a>
+                </div>
+            </div>
+            <div class="hero-austria-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/austria.html">Austria Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
