--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -66,6 +66,21 @@
                     <a href="../buy-files/denmark.html">Denmark Locations</a>
                 </div>
             </div>
+            <div class="category-button">
+                <a href="../buy-files/romaina.html">Romania Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/holland.html">Holland Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/norway.html">Norway Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/sweden.html">Sweden Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/finland.html">Finland Locations</a>
+            </div>
             <div class="hero-latvia-image">
                 <div class="hero-text-all">
                     <a href="../buy-files/latvia.html">Latvia Locations</a>
@@ -91,6 +106,21 @@
                     <a href="../buy-files/greece.html">Greece Locations</a>
                 </div>
             </div>
+            <div class="category-button">
+                <a href="../buy-files/bulgaria.html">Bulgaria Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/czechia.html">Czechia Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/slovenia.html">Slovenia Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/malta.html">Malta Locations</a>
+            </div>
+            <fiv class="category-button">
+                <a href="../buy-files/serbia.html">Serbia Locations</a>
+            </fiv>
             <div class="hero-irland-image">
                 <div class="hero-text-all">
                     <a href="../buy-files/irland.html">Irland Locations</a>
@@ -115,6 +145,21 @@
                 <div class="hero-text-all">
                     <a href="../buy-files/austria.html">Austria Locations</a>
                 </div>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/estonia.html">Estonia Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/hungary.html">Hungary Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/lithuania.html">Lithuania Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/slovakia.html">Slovakia Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/luxemborg.html">Luxemborg Locations</a>
             </div>
         </div>
 
