--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -161,6 +161,16 @@
             <div class="category-button">
                 <a href="../buy-files/luxemborg.html">Luxemborg Locations</a>
             </div>
+            <div class="hero-spain-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/spain.html">Spain Locations</a>
+                </div>
+            </div>
+            <div class="hero-protugal-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/portugal.html">Portugal Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
