--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -159,16 +159,26 @@
                 <a href="../buy-files/slovakia.html">Slovakia Locations</a>
             </div>
             <div class="category-button">
-                <a href="../buy-files/luxemborg.html">Luxemborg Locations</a>
+                <a href="../buy-files/spain.html">Spain Locations</a>
             </div>
-            <div class="hero-spain-image">
+            <div class="hero-luxemborg-image">
                 <div class="hero-text-all">
-                    <a href="../buy-files/spain.html">Spain Locations</a>
+                    <a href="../buy-files/luxemborg.html">Luxemborg Locations</a>
                 </div>
             </div>
             <div class="hero-protugal-image">
                 <div class="hero-text-all">
                     <a href="../buy-files/portugal.html">Portugal Locations</a>
+                </div>
+            </div>
+            <div class="hero-monacco-image">
+                <div class="hero-text-all">
+                    <a  href="../buy-files/monacoo.html">Monacco Locations</a>
+                </div>
+            </div>
+            <div class="hero-san-marino-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/sanmarino.html">San Marino Locations</a>
                 </div>
             </div>
         </div>
