--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -181,6 +181,11 @@
                     <a href="../buy-files/sanmarino.html">San Marino Locations</a>
                 </div>
             </div>
+            <div class="hero-gibrator-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/gibraltar.html">Gibraltar Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
