--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -40,7 +40,10 @@
         </div>
 
         <div class="flex-europe-constiries-box wrap">
-            <p><b>Europe Locations</b></p>
+            <div class="box-title">
+                <p><b>Europe Locations</b></p>
+            </div>
+            <br>
             <div class="hero-italy-image">
                 <div class="hero-text-all">
                     <a href="../buy-files/italy.html">Italy Locations</a>
