--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -191,6 +191,17 @@
             </div>
         </div>
 
+        <div class="flex-asia-constiries-box wrap">
+            <div class="asia-box-title">
+                <p><b>Asia Locations</b></p>
+            </div>
+            <div class="hero-japan-image">
+                <div class="hero-asia-text">
+                    <a href="../buy-files/japan.html">Japan Locations</a>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <!--Footer-->
