--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -196,8 +196,28 @@
                 <p><b>Asia Locations</b></p>
             </div>
             <div class="hero-japan-image">
-                <div class="hero-asia-text">
+                <div class="hero-text-all">
                     <a href="../buy-files/japan.html">Japan Locations</a>
+                </div>
+            </div>
+            <div class="hero-philliphs-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/philliphs.html">Philippines Locations</a>
+                </div>
+            </div>
+            <div class="hero-turkey-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/turkey.html">Turkey Locations</a>
+                </div>
+            </div>
+            <div class="hero-sri-lanka-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/sri-lanka.html">Sri Lanka Locations</a>
+                </div>
+            </div>
+            <div class="hero-thailand-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/thailand.html">Thailand Locations</a>
                 </div>
             </div>
         </div>
