--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -220,6 +220,12 @@
                     <a href="../buy-files/thailand.html">Thailand Locations</a>
                 </div>
             </div>
+            <div class="category-button">
+                <a href="../buy-files/cambodia.html">Cambodia Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/jordon.html">Jordon Locations</a>
+            </div>
         </div>
 
     </main>
