--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -226,6 +226,12 @@
             <div class="category-button">
                 <a href="../buy-files/jordon.html">Jordon Locations</a>
             </div>
+            <div class="category-button">
+                <a href="../buy-files/uae.html">UAE Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/isreal.html">Isreal Locations</a>
+            </div>
         </div>
 
     </main>
