--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -232,6 +232,9 @@
             <div class="category-button">
                 <a href="../buy-files/isreal.html">Isreal Locations</a>
             </div>
+            <div class="category-button">
+                <a href="../buy-files/laos.html">Laos Locations</a>
+            </div>
         </div>
 
     </main>
