--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -235,6 +235,26 @@
             <div class="category-button">
                 <a href="../buy-files/laos.html">Laos Locations</a>
             </div>
+            <div class="hero-singapore-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/singapore.html">Singapore Locations</a>
+                </div>
+            </div>
+            <div class="hero-maledives-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/maledives.html">Maledives Locations</a>
+                </div>
+            </div>
+            <div class="hero-armenia-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/armenia.html">Armenia Locations</a>
+                </div>
+            </div>
+            <div class="hero-qatar-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/qatar.html">Qatar Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
