--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -255,6 +255,11 @@
                     <a href="../buy-files/qatar.html">Qatar Locations</a>
                 </div>
             </div>
+            <div class="hero-cyprus-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/cyprus.html">Cyprus Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
