--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -262,6 +262,17 @@
             </div>
         </div>
 
+        <div class="flex-oceania-constiries-box wrap">
+            <div class="oceania-box-title">
+                <p><b>Oceania Locations</b></p>
+            </div>
+            <div class="hero-australia-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/austraila.html">Australia Locations</a>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <!--Footer-->
