--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -271,6 +271,11 @@
                     <a href="../buy-files/austraila.html">Australia Locations</a>
                 </div>
             </div>
+            <div class="hero-new-zeland-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/new-zeland.html">New Zeland Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
