--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -276,6 +276,11 @@
                     <a href="../buy-files/new-zeland.html">New Zeland Locations</a>
                 </div>
             </div>
+            <div class="hero-fiji-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/fiji.html">Fiji Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
