--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -281,6 +281,16 @@
                     <a href="../buy-files/fiji.html">Fiji Locations</a>
                 </div>
             </div>
+            <div class="hero-solomon-islands-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/solomon-islands.html">Solomon Islands Locations</a>
+                </div>
+            </div>
+            <div class="hero-new-guinea-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/new-guinea.html">Papua New Guinea Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
