--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -293,6 +293,12 @@
             </div>
         </div>
 
+        <div class="flex-africa-constiries-box wrap">
+            <div class="africa-box-title">
+                <p><b>Africa Locations</b></p>
+            </div>
+        </div>
+
     </main>
 
     <!--Footer-->
