--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -297,6 +297,11 @@
             <div class="africa-box-title">
                 <p><b>Africa Locations</b></p>
             </div>
+            <div class="hero-edgypt-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/egypt.html">Egypt Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
