--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -302,6 +302,11 @@
                     <a href="../buy-files/egypt.html">Egypt Locations</a>
                 </div>
             </div>
+            <div class="hero-tanzania-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/tanzania.html">Tanzania Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
