--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -307,6 +307,10 @@
                     <a href="../buy-files/tanzania.html">Tanzania Locations</a>
                 </div>
             </div>
+            <div class="hero-morocco-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/moracco.html">Moracco Locations</a>
+                </div>
         </div>
 
     </main>
