--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -311,6 +311,12 @@
                 <div class="hero-text-all">
                     <a href="../buy-files/moracco.html">Moracco Locations</a>
                 </div>
+            </div>
+            <div class="hero-kenya-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/kenya.html">Kenya Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
