--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -317,6 +317,11 @@
                     <a href="../buy-files/kenya.html">Kenya Locations</a>
                 </div>
             </div>
+            <div class="hero-ghana-image">
+                <div class="hero-text-all">
+                    <a href="../buy-files/ghanna.html">Ghana Locations</a>
+                </div>
+            </div>
         </div>
 
     </main>
