--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -322,6 +322,9 @@
                     <a href="../buy-files/ghanna.html">Ghana Locations</a>
                 </div>
             </div>
+            <div class="category-button">
+                <a href="../buy-files/angola.html">Angola Locations</a>
+            </div>
         </div>
 
     </main>
