--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -325,6 +325,9 @@
             <div class="category-button">
                 <a href="../buy-files/angola.html">Angola Locations</a>
             </div>
+            <div class="category-button">
+                <a href="../buy-files/mozambique.html">Mozambique Locations</a>
+            </div>
         </div>
 
     </main>
