--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -328,6 +328,9 @@
             <div class="category-button">
                 <a href="../buy-files/mozambique.html">Mozambique Locations</a>
             </div>
+            <div class="category-button">
+                <a href="../buy-files/madagascar.html">Madagascar Locations</a>
+            </div>
         </div>
 
     </main>
