--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -331,6 +331,12 @@
             <div class="category-button">
                 <a href="../buy-files/madagascar.html">Madagascar Locations</a>
             </div>
+            <div class="category-button">
+                <a href="../buy-files/cameroon.html">Cameroon Locations</a>
+            </div>
+            <div class="category-button">
+                <a href="../buy-files/zimbabwe.html">Zimbabwe Locations</a>
+            </div>
         </div>
 
     </main>
