--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -339,6 +339,12 @@
             </div>
         </div>
 
+        <div class="flex-north-south-america-constiries-box wrap">
+            <div class="amercias-box-title">
+                <p><b>North And South America Locations</b></p>
+            </div>
+        </div>
+
     </main>
 
     <!--Footer-->
